# g1tank_server

./: .gitignore  CMakeLists.txt  CarConnection.cpp  CarConnection.h  CarSession.cpp  CarSession.h  ConnectionManager.h  Dockerfile  PilotConnection.cpp  PilotConnection.h  PilotSession.cpp  PilotSession.h  Server.cpp  Server.h  constants.h  main.cpp
.github/workflows/: docker_build.yml
docker/: Dockerfile  docker-compose.yml
docker/cpp_with_boost_image/: Dockerfile
utils/: ConnectionManager.h  Event.cpp  Event.h  Event.hpp  coroutine_err_handler.h  include_boost_asio.h  timestamp.h  uuid.h
utils/network/: Websocket.cpp  Websocket.h
